Fixed a bug where rotating your phone would squish the site and break it.

--- a/src/Board.scss
+++ b/src/Board.scss
@@ -5,7 +5,6 @@
   width: calc(100% - 200px);
   background-color: $sBGC;
   padding-bottom: 20px;
-  min-height: calc(100vh - 270px);
 }
 
 .Board-items-cont {
